# FlappyBird

./: .flake8  .gitignore  .pydocstyle  MANIFEST.in  Pipfile  README.md  dodo.py  main.py  pyproject.toml  settings.py  setup.cfg  states.py
FlappyBird/: __init__.py  __main__.py
doc/: conf.py  index.rst
doc/locale/en/LC_MESSAGES/: index.po
doc/locale/ru/LC_MESSAGES/: index.po
docs/source/: conf.py  index.rst
docs/source/locale/ru/LC_MESSAGES/: index.po
docs/source/locales/en/LC_MESSAGES/: index.po
docs/source/locales/ru/LC_MESSAGES/: index.po
test/: test_Background.py  test_Barrier.py  test_Bird.py  test_Coin.py  test_CoinScore.py  test_Frame.py  test_Score.py  test_Screen.py
tests/: test_Background.py  test_Barrier.py  test_Bird.py  test_Coin.py  test_CoinScore.py  test_Frame.py  test_Score.py  test_Screen.py
