[metadata]
name = FlappyBird
version = 0.0.1
url = https://github.com/TheFieryLynx/FlappyBird
author = Andrew Birukov, Aleksandra Korabulina, Diana Rudenko
description = Семестровый проект по спецкурсу «Совместная разработка приложений на Python3»
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = FlappyBird
include_package_data = True
install_requires =
   pygame

[options.package_data]
* = *